# od2net

./: .gitignore  Cargo.toml  Dockerfile  README.md  edge_cost.html  edinburgh.qmd  index.html  interactive.html  package-lock.json  package.json  route.js
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: docker.yml  web.yml
aggregate_routes/: Cargo.toml
aggregate_routes/src/: config.rs  detailed_route_output.rs  main.rs  od.rs  osm2network.rs  requests.rs  router.rs  timer.rs  utils.rs
aggregate_routes/src/network/: amenities.rs  create_from_osm.rs  mod.rs  output.rs
aggregate_routes/src/plugins/: cost.rs  custom_lts.rs  mod.rs  route_cost.rs
assets/: @vite-plugin-wasm-pack@wasm-od2net-06f26cd5.js  @vite-plugin-wasm-pack@wasm-od2net-379c176f.js  @vite-plugin-wasm-pack@wasm-od2net-8cae2080.js  @vite-plugin-wasm-pack@wasm-od2net-acbe675d.js  CostFunction-1c17c3c6.js  CostFunction-20018123.js  CostFunction-4625c6e9.js  CostFunction-6f46faef.js  CostFunction-81a91059.js  CostFunction-88c358f3.js  CostFunction-a1f3b94f.js  CostFunction-a8c702f0.js  CostFunction-b0dd55a1.js  CostFunction-e35500c2.js  Layout-09a07ccd.js  Layout-0eeb92fa.js  Layout-175d0a30.css  Layout-181f82f5.js  Layout-1e40cbba.css  Layout-2c5c8e4b.js  Layout-3cbf44cd.js  Layout-434d0d39.css  Layout-4cd70fb2.js  Layout-50ced61d.css  Layout-63eb556b.js  Layout-663a57a0.js  Layout-6a808470.js  Layout-965cdda3.css  Layout-a6e3acf3.js  Layout-af65b6e0.js  Layout-b64294b5.css  Layout-cca6f705.js  Layout-d228936f.css  Layout-e3c78437.js  Layout-e4d1da89.css  Layout-e9bd37ce.js  Legend-03fb006c.js  Legend-07540826.js  Legend-2db49f7e.js  Legend-36db5a45.js  (+298 more)
docs/: README.md  codelab_examples.md  codelab_new_area.md  config_cost.md  config_od.md  config_uptake.md  credits.md  output.md  performance.md  quick_start.md  tutorial_examples.md  tutorial_new_area.md  using.md
examples/: clip_example_pbfs.sh  edinburgh.md  run_all.sh  summarize_results.py  utils.py
examples/edinburgh/: config.json  setup.py
examples/england_2011_home_to_work/: .gitignore  README.md  config.json  setup.py
examples/england_2021_home_to_work/: README.md  config.json  setup.py
examples/lisbon/: README.md  config.json  setup.R  setup.py
examples/liverpool/: config.json  config_quiet.json  setup.py
examples/liverpool/input/: destinations.geojson
examples/london/: config.json  setup.py
examples/oneshot/: config.json  oneshot.py
examples/seattle/: config.json  setup.py
examples/seattle_workers/: config.json  setup.py
examples/uk_2011_home_to_work/: .gitignore  README.md  config.json
examples/york/: config.json  cost.py  lts.py  setup.py
examples/york/input/: destinations.geojson  od.csv
examples/york_minimal/: .gitignore  README.md  README.qmd  config.json  lts.py  setup.py
examples/york_minimal/input/: destinations.geojson  od.csv  subpoints.geojson  zones.geojson
extractor/: Cargo.toml
extractor/src/: main.rs
input/: od.csv  requests.geojson  zones.geojson
lts/: Cargo.toml
lts/src/: allowed.rs  bike_ottawa.rs  lib.rs  osm_unit_test_tool.html  parse.rs  speed_limit_only.rs  tags.rs  tests.rs  walking.rs  wasm.rs
od2net/: Cargo.toml
od2net/src/: config.rs  lib.rs  main.rs  node_map.rs  od.rs  requests.rs  router.rs  timer.rs
od2net/src/network/: create_from_osm.rs  greenspace.rs  mod.rs  output.rs
od2net/src/plugins/: cost.rs  lts.rs  uptake.rs
osm2network/: Cargo.toml
osm2network/src/: main.rs
r/: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  README.md  README.qmd  authors.html  config.json  index.html  performance.md  pkgdown.yml  sitemap.xml  tutorial_details.md  tutorial_examples.md  tutorial_new_area.md
r/.devcontainer/: devcontainer.json
r/R/: setup.R
r/man/: getbbox_from_zones.Rd  make_elevation.Rd  make_origins.Rd  make_osm.Rd  make_zones.Rd
r/reference/: getbbox_from_zones.html  index.html  make_origins.html  make_osm.html
src/: config.rs  custom_routing.rs  detailed_route_output.rs  input.rs  main.rs  node_map.rs  od.rs  osm2network.rs  osrm.rs  requests.rs  tags.rs  timer.rs
src/plugins/: lts.rs  mod.rs  route_cost.rs  uptake.rs
tippe/: Cargo.toml  example.geojson  less_tiny.geojson
tippe/src/: main.rs  math.rs
viewer/: README.md  edge_cost.html  index.html  interactive.html  package-lock.json  package.json  vite.config.ts
viewer/assets/: README.md  destination_subpoints.geojson  destinations.geojson  origin_subpoints.geojson  origins.geojson
viewer/src/: App.svelte  ClippedPBFs.svelte  CostFunction.svelte  EdgeCostApp.svelte  Header.svelte  Histogram.svelte  InteractiveApp.svelte  Layers.svelte  Layout.svelte  Loader.svelte  Loading.svelte  OverpassSelector.svelte  Popup.svelte  PreferenceRadar.svelte  PropertiesTable.svelte  SequentialLegend.svelte  SidebarControls.svelte  StreetView.svelte  ToggleLayer.svelte  TradeoffRadar.svelte  common.ts  loader.ts  lts.ts  stores.ts
wasm-od2net/: Cargo.toml
wasm-od2net/src/: lib.rs
web/: .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  ClippedPBFs.svelte  CostFunction.svelte  EdgeCostApp.svelte  Header.svelte  InteractiveApp.svelte  Layers.svelte  Layout.svelte  SidebarControls.svelte  StreetView.svelte  TradeoffRadar.svelte  stores.ts
