[package]
name = "aggregate_routes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }
fast_paths = { git = "https://github.com/easbar/fast_paths" }
futures = "0.3.28"
geo = "0.26.0"
geojson = { version = "0.24.1", default-features = false }
indicatif = "0.17.5"
osmpbf = "0.3.1"
reqwest = { version = "0.11.18", default-features = false }
rstar = "0.11.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
