[package]
name = "aggregate_routes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }
csv = "1.2.2"
fast_paths = { git = "https://github.com/easbar/fast_paths" }
fs-err = "2.9.0"
futures = "0.3.28"
geo = "0.26.0"
geojson = "0.24.1"
indicatif = { version = "0.17.5", features = ["rayon"] }
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
num_cpus = "1.16.0"
osmpbf = "0.3.1"
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false }
rstar = "0.11.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
