[package]
name = "od2net"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.2", features = ["derive"] }
console = "0.15.7"
csv = "1.2.2"
fast_paths = { git = "https://github.com/easbar/fast_paths" }
fs-err = "2.9.0"
geo = "0.26.0"
geojson = { git = "https://github.com/georust/geojson" }
indicatif = { version = "0.17.6", features = ["rayon"] }
itertools = "0.11.0"
log = "0.4.20"
lts = { path = "../lts" }
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
num_cpus = "1.16.0"
osmpbf = "0.3.1"
rayon = "1.7.0"
rstar = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
