[package]
name = "od2net"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive"] }
console = "0.15.8"
csv = "1.3.0"
elevation = { git = "https://github.com/dabreegster/elevation" }
fast_paths = "1.0.0"
fs-err = "2.11.0"
geo = "0.28.0"
geojson = { git = "https://github.com/georust/geojson" }
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.12.1"
log = "0.4.21"
lts = { path = "../lts" }
osm-reader = { git = "https://github.com/a-b-street/osm-reader", features = ["serde"] }
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
num_cpus = "1.16.0"
rayon = "1.9.0"
rstar = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
