[package]
name = "wasm-od2net"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.1"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
fast_paths = { git = "https://github.com/easbar/fast_paths" }
fs-err = "2.9.0"
geojson = { git = "https://github.com/georust/geojson" }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.20"
od2net = { path = "../od2net" }
rstar = "0.12.0"
serde = "1.0.188"
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }
